<resources>
  <string name="app_name">Le Memeify</string>

  <!-- Header -->
  <string name="app_header">Le Memeify 👌</string>

  <!-- Actions -->
  <string name="action_save">Save</string>
  <string name="action_save_copy">Save copy</string>
  <string name="action_save_location">Save as…</string>

  <string name="filter_images">Filter by images</string>
  <string name="filter_videos">Filter by videos</string>
  <string name="filter_favorite">Filter by favorite</string>
  <string name="filter_trash">Filter by trash</string>

  <string name="action_favorite_add">Add to favorite</string>
  <string name="action_favorite_remove">Remove from favorite</string>
  <string name="action_trash_add">Add to trash</string>
  <string name="action_trash_remove">Remove from trash</string>
  <string name="action_delete">Delete</string>

  <string name="action_selected">%d</string>

  <!-- Details -->
  <string name="image_details">Details</string>
  <string name="image_kb">%d kB</string>
  <string name="image_dimensions">%s x %s</string>
  <string name="image_location">Coordinates: %.3f, %.3f</string>

  <!-- Hint -->
  <string name="hint_title">Title goes here</string>
  <string name="hint_subtitle">And subtitle goes here</string>

  <!-- Snackbar -->
  <string name="missing_permission_media">You need to grant media permissions to use the app</string>

  <string name="not_available_feature">Feature only available on Android 11 and above.</string>
  <string name="not_available_edit_video">You can only edit images. Please select a different filter.</string>

  <string name="no_images_on_device">No images on device</string>
  <string name="no_video_on_device">No video on device</string>
  <string name="no_favorite_media">No favorite media</string>
  <string name="no_trashed_media">Your trash is empty</string>

  <string name="deleted_all">Selected files removed</string>

  <string name="image_saved">Image saved successfully</string>
  <string name="image_updated">Image updated successfully</string>
  <string name="image_fail">You need to grant permissions to update external files</string>

  <!-- Content description -->
  <string name="description_nav_main">Main Fragment</string>
  <string name="description_nav_details">Details Fragment</string>
  <string name="description_image">Image from gallery</string>
  <string name="description_selected">Selected image from gallery</string>
  <string name="description_meme">Create meme</string>
  <string name="description_info">See image info</string>
  <string name="description_delete">Delete image</string>
</resources>