<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/tb_details"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@android:color/transparent"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_below="@+id/tb_details"
    android:layout_above="@id/ll_actions">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_selected"/>

      <!-- Meme -->
      <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_image"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_meme"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:singleLine="true"
        android:inputType="text"
        android:autofillHints="text"
        android:hint="@string/hint_title"
        android:background="@color/color25TransparentBlack"
        android:textColorHint="@android:color/white"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:ignore="LabelFor" />

      <EditText
        android:id="@+id/et_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_image"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_meme"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:singleLine="true"
        android:inputType="text"
        android:autofillHints="text"
        android:hint="@string/hint_subtitle"
        android:background="@color/color25TransparentBlack"
        android:textColorHint="@android:color/white"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:ignore="LabelFor" />
    </RelativeLayout>
  </ScrollView>

  <!-- Info -->
  <LinearLayout
    android:id="@+id/ll_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/tb_details"
    android:background="@color/color80TransparentBlack"
    android:orientation="vertical"
    android:padding="@dimen/margin_default"
    android:visibility="invisible">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margin_default"
      android:fontFamily="sans-serif"
      android:text="@string/image_details"
      android:textAllCaps="true"
      android:textColor="@android:color/darker_gray"
      android:textSize="15sp"
      android:textStyle="bold"/>

    <TextView
      android:id="@+id/tv_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ellipsize="start"
      android:fontFamily="sans-serif"
      android:singleLine="true"
      android:textColor="@android:color/white"
      android:textSize="15sp"/>

    <TextView
      android:id="@+id/tv_path"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ellipsize="start"
      android:fontFamily="sans-serif"
      android:singleLine="true"
      android:textColor="@android:color/white"
      android:textSize="15sp"/>

    <TextView
      android:id="@+id/tv_location"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ellipsize="start"
      android:fontFamily="sans-serif"
      android:singleLine="true"
      android:textColor="@android:color/white"
      android:textSize="15sp"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/tv_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:ellipsize="start"
        android:fontFamily="sans-serif"
        android:singleLine="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"/>

      <TextView
        android:id="@+id/tv_dimensions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:ellipsize="start"
        android:fontFamily="sans-serif"
        android:singleLine="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"/>
    </LinearLayout>
  </LinearLayout>

  <!-- Actions -->
  <LinearLayout
    android:id="@+id/ll_actions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/color80TransparentBlack"
    android:gravity="center"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/iv_meme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_default"
        android:paddingTop="@dimen/margin_default"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_meme"
        android:contentDescription="@string/description_meme"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/iv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_default"
        android:paddingTop="@dimen/margin_default"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_info"
        android:contentDescription="@string/description_info"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_default"
        android:paddingTop="@dimen/margin_default"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/description_delete"/>
    </LinearLayout>
  </LinearLayout>
</RelativeLayout>